[package]
name = "JL-transachain"
version = "0.1.0"
edition = "2024"

[lib]
name = "blockchainlib"
path = "src/lib.rs"

[[bin]]
name = "blockchain"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
crypto-hash = "0.3.4"
actix-web = "4"
actix-cors = "0.7.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0"